feat: add options for tab switching and enhance button functionality

--- a/index.html
+++ b/index.html
@@ -76,7 +76,21 @@ shadow-md hover:bg-red-600 hover:scale-105 hover:cursor-pointer
                 </h1>
             </header>
 
-            <div class="px-6 pb-10">
+            <div class="px-6 pb-10 w-full">
+                <div class="flex gap-2 mb-6 justify-center p-1 rounded-lg inline-flex w-full max-w-7xl mx-auto">
+                    <button
+                            id="clicks-upgrades-button"
+                            class="px-6 py-2.5 font-semibold text-gray-700 rounded-md hover:bg-white hover:shadow-sm transition-all duration-200"
+                    >
+                        🧀 Améliorations clicks
+                    </button>
+                    <button
+                            id="auto-upgrades-button"
+                            class="px-6 py-2.5 font-semibold text-gray-700 rounded-md hover:bg-white hover:shadow-sm transition-all duration-200"
+                    >
+                        🧀 Améliorations automatiques
+                    </button>
+                </div>
                 <div id="items-shop"
                      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 w-full max-w-7xl mx-auto">
                 </div>
