--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PARMCLICKER</title>
     <link rel="shortcut icon" href="assets/img/small_cheese.png" type="image/x-icon">
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="scripts/index.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
@@ -46,7 +46,7 @@
             <div class="relative w-100 h-100 flex items-center justify-center">
 
                 <img    alt="Cheese to click"
-                        src="./assets/img/cheese_1.png"
+                        src="assets/img/cheese_1.png"
                         class="w-48 h-48 z-10 cursor-pointer hover:scale-105 active:scale-95 transition"
                         id="cheese_to_click"
                         draggable="false"
