--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,8 @@
                 <div id="error-message" class="text-center text-red-600 font-bold text-sm hidden">
                 </div>
 
+                <span id="user-name"></span>
+
                 <div class="bg-white/50 rounded-lg px-4 py-3 min-w-[180px]">
                     <p id="cheese-total" class="text-xl font-black text-amber-900 text-right">0 🧀</p>
                     <p id="cheese-click" class="text-xs text-amber-700 text-right mt-1">1 click = 1 🧀</p>
